--- a/faq.html
+++ b/faq.html
@@ -85,7 +85,7 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="programs.html">Programs</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="success-stories.html">Success Stories</a></li>
+          <li><a href="success.html">Success Stories</a></li>
           <li><a href="get-involved.html">Get Involved</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="contact.html">Contact</a></li>
