Improved the styling

--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,8 @@
           
           <div class="my-2">
             <h3><i class="fas fa-phone"></i> Phone</h3>
-            <p>+256 XXX XXX XXX</p>
-            <p>+256 XXX XXX XXX</p>
+            <p>+256 783 894926</p>
+            <!--<p>+256 XXX XXX XXX</p>-->
           </div>
           
           <div class="my-2">
