--- a/index.html
+++ b/index.html
@@ -3,39 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="YESU FOUNDATION - Preparing children and youths to become self-reliant adults living in harmony">
+  <meta name="description" content="About YESU FOUNDATION - Our history, vision, and mission">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
-  <title>YESU FOUNDATION - Home</title>
+  <title>YESU FOUNDATION - About Us</title>
 </head>
 <body>
   <!-- Header -->
   <header id="main-header">
     <div class="container">
       <nav id="navbar">
-        <h1 class="logo"><a href="index.html">YESU FOUNDATION</a></h1>
+        <div class="logo">
+          <a href="index.html">
+            <img src="logo.jpg" alt="YESU FOUNDATION Logo" class="logo-image">
+            <span class="logo-text">YESU FOUNDATION</span>
+          </a>
+        </div>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="programs.html">Programs</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="success.html">Success Stories</a></li>
           <li><a href="get-involved.html">Get Involved</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="success.html">Success stories</a></li>
-          <li><a href="faq.html">FAQ</a></li>
+          <!--<li><a href="faq.html">FAQ</a></li>-->
         </ul>
       </nav>
     </div>
   </header>
 
-  <!-- Showcase -->
-  <section id="showcase">
-    <div class="overlay"></div>
+  <!-- Page Header -->
+  <section class="bg-dark py-3">
+    <div class="container text-center">
+      <h1>About YESU FOUNDATION</h1>
+      <p>Learn about our history, mission, and the impact we're making in Luwero</p>
+    </div>
+  </section>
+
+  <!-- About Info -->
+  <section class="py-3">
     <div class="container">
-      <div class="showcase-content">
-        <h1>Preparing Children for a Better Future</h1>
-        <p>YESU FOUNDATION exists to prepare children and youths out of poverty to become responsible adults living in harmony.</p>
-        <a href="get-involved.html" class="btn btn-primary">Get Involved</a>
+      <div class="about-info">
+        <div class="about-image">
+          <img src="children.jpg" alt="Children at YESU FOUNDATION">
+        </div>
+        <div>
+          <h2>Our Story</h2>
+          <p>Following the vulnerability of communities, children and youths in the area as well as COVID effects, YESU FOUNDATION was started by Mr. Paul Zziwa and Rev. Damalie Nalubwama who are church ministers under Luwero diocese in 2021.</p>
+          <p>The foundation targets the needy of the neediest children and youths in Lukomera community and Luwero Diocese at large, aiming to transform their lives and prepare them for a better future.</p>
+          <p>Located in Luwero district, under Luwero Diocese (Anglican Faith), we work closely with local communities to identify and support those most in need.</p>
+          <h3 class="my-2">Our Founders</h3>
+          <p>Mr. Paul Zziwa and Rev. Damalie Zziwa are dedicated church ministers with a passion for serving the most vulnerable in their community. Their vision and commitment have been the driving force behind YESU FOUNDATION's establishment and growth.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -57,35 +77,27 @@
     </div>
   </section>
 
-  <!-- Core Activities -->
+  <!-- Objectives -->
   <section class="py-3">
     <div class="container">
-      <h2 class="text-center my-2">Our Core Activities</h2>
-      <div class="activities">
+      <h2 class="text-center my-2">Our Objectives</h2>
+      <p class="text-center">We aim at producing holistic adults basing on three key aspects:</p>
+            
+      <div class="activities my-3">
         <div class="activity">
-          <i class="fas fa-church"></i>
-          <h3>Gospel Preaching</h3>
-          <p>Spreading the gospel of the Lord and ensuring spiritual growth in our communities.</p>
-        </div>
-        <div class="activity">
-          <i class="fas fa-hand-holding-heart"></i>
-          <h3>Fighting Poverty</h3>
-          <p>Working to alleviate poverty through various community-based initiatives.</p>
-        </div>
-        <div class="activity">
-          <i class="fas fa-graduation-cap"></i>
-          <h3>Promoting Education</h3>
-          <p>Supporting children's education through sponsorships and educational resources.</p>
+          <i class="fas fa-pray"></i>
+          <h3>Spiritual Aspect</h3>
+          <p>Ensuring that beneficiaries demonstrate their commitment to the Lordship to Christ through spiritual guidance and mentorship.</p>
         </div>
         <div class="activity">
           <i class="fas fa-heartbeat"></i>
-          <h3>Health Promotion</h3>
-          <p>Providing health training, medical care, and promoting good health practices.</p>
+          <h3>Physical Aspect</h3>
+          <p>Ensuring that beneficiaries choose good health practices and maintain good physical health through training and enhancing relationships between beneficiaries, caregivers, and sponsors.</p>
         </div>
         <div class="activity">
-          <i class="fas fa-seedling"></i>
-          <h3>Better Farming</h3>
-          <p>Teaching sustainable and improved farming methods to enhance food security.</p>
+          <i class="fas fa-brain"></i>
+          <h3>Cognitive Aspect</h3>
+          <p>Ensuring that beneficiaries exhibit the motivation and skills to be economically self-supporting through empowerment and education.</p>
         </div>
       </div>
     </div>
@@ -94,9 +106,9 @@
   <!-- Call to Action -->
   <section class="bg-primary py-3">
     <div class="container text-center">
-      <h2>Make a Difference Today</h2>
-      <p class="my-1">Join us in our mission to transform the lives of children and youth in Luwero.</p>
-      <a href="get-involved.html" class="btn btn-dark my-1">Donate Now</a>
+      <h2>Join Our Mission</h2>
+      <p class="my-1">Help us transform the lives of vulnerable children and youth in Luwero.</p>
+      <a href="get-involved.html" class="btn btn-dark my-1">Get Involved</a>
       <a href="contact.html" class="btn btn-light my-1">Contact Us</a>
     </div>
   </section>
