--- a/success.html
+++ b/success.html
@@ -57,16 +57,21 @@
   <header id="main-header">
     <div class="container">
       <nav id="navbar">
-        <h1 class="logo"><a href="index.html">YESU FOUNDATION</a></h1>
+        <div class="logo">
+          <a href="index.html">
+            <img src="logo.jpg" alt="YESU FOUNDATION Logo" class="logo-image">
+            <span class="logo-text">YESU FOUNDATION</span>
+          </a>
+        </div>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="programs.html">Programs</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="success-stories.html">Success Stories</a></li>
+          <li><a href="success.html">Success Stories</a></li>
           <li><a href="get-involved.html">Get Involved</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="faq.html">FAQ</a></li>
+          <!--<li><a href="faq.html">FAQ</a></li>-->
         </ul>
       </nav>
     </div>
@@ -139,11 +144,11 @@ I also ask the Lord to use me such that I achieve my Goals and impact lives too.
       <!-- Story 3 -->
       <div class="story">
         <div class="story-image">
-          <img src="images/health.jpg" alt="Mary's Story">
+          <img src="betty1.jpg" alt="Mary's Story">
         </div>
         <div class="story-content">
           <div class="story-meta">
-            <span><i class="fas fa-user"></i>Betty is a married woman now</span>
+            <span><i class="fas fa-user"></i>Above is Betty and uncle Zziwa Paul</span>
             <span><i class="fas fa-calendar"></i> Joined in 2018</span>
           </div>
           <h2></h2>
@@ -170,21 +175,21 @@ on you forever.</p>
       <!-- Story 4 -->
       <div class="story">
         <div class="story-image">
-          <img src="images/education.jpg" alt="Community School Story">
+          <img src="derrick.jpg" alt="Community School Story">
         </div>
         <div class="story-content">
           <div class="story-meta">
-            <span><i class="fas fa-users"></i> Lukomera Community School</span>
-            <span><i class="fas fa-calendar"></i> Partnership began in 2021</span>
+            <span><i class="fas fa-users"></i>Derrick</span>
+            <span><i class="fas fa-calendar"></i> Joined 2011</span>
           </div>
-          <h2>Transforming Education in Lukomera</h2>
-          <p>The Lukomera Community School was struggling with inadequate facilities, limited teaching resources, and low enrollment rates. Many children in the community were not attending school regularly due to these challenges.</p>
-          <p>In 2021, YESU FOUNDATION partnered with the school to improve educational outcomes for children in the community. We renovated classrooms, provided teaching materials, and implemented teacher training programs.</p>
+          <h2>Derrick's story</h2>
+          <p>I'm Derick Alimani Ajuni, and I'm forever grateful for the life-changing encounter I had with Mr. Zziwa Paul in 2011 during my high school days. Our bond grew stronger in 2012 when he volunteered with Compassion Uganda and introduced me to the piano, marking the beginning of a beautiful mentorship that shaped my spiritual journey. Under his guidance, I discovered the joy of serving God and grew in my faith through attending night prayers and exploring ministry. The Zziwa family, including his loving wife Rev. Damalie Zziwa, has been a constant source of encouragement, supporting me throughout my studies and ministry endeavors. Their love and care played a significant role in my journey, enabling me to graduate as a secondary teacher and pursue community work with AVA Mission Africa. I'm now part of the Smart Band Gulu, and I'm hopeful for the future. The Zziwa family's love, kindness, and generosity have been a true blessing, and I'm grateful for their influence, praying that God continues to bless them abundantly.</p>
+          <p></p>
           <div class="quote">
-            <p>"The transformation of our school has been remarkable. With better facilities and resources, our teachers are more motivated, and our students are eager to learn. School attendance has improved significantly." - Headteacher, Lukomera Community School</p>
+            <p>"Serving the lord brings peace"</p>
           </div>
-          <p>Today, the school has seen a 40% increase in enrollment and a significant improvement in academic performance. The school now serves as a model for other schools in the region.</p>
-          <p>This success story demonstrates how our community-based approach to education can create lasting change for entire communities, not just individual children.</p>
+          <p>Today Derrick is a proffessional Highschool teacher and a band member who plays piano and guitar</p>
+          <p></p>
         </div>
       </div>
     </div>
