--- a/programs.html
+++ b/programs.html
@@ -13,16 +13,21 @@
   <header id="main-header">
     <div class="container">
       <nav id="navbar">
-        <h1 class="logo"><a href="index.html">YESU FOUNDATION</a></h1>
+        <div class="logo">
+          <a href="index.html">
+            <img src="logo.jpg" alt="YESU FOUNDATION Logo" class="logo-image">
+            <span class="logo-text">YESU FOUNDATION</span>
+          </a>
+        </div>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="programs.html">Programs</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
+          <li><a href="success.html">Success Stories</a></li>
           <li><a href="get-involved.html">Get Involved</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="success.html">Success stories</a></li>
-          <li><a href="faq.html">FAQ</a></li>
+          <!--<li><a href="faq.html">FAQ</a></li>-->
         </ul>
       </nav>
     </div>
